# conductor-server

./: .gitignore  .spectral.mjs  Dockerfile  Dockerfile.base  docker-compose-dev.yml  docker-compose-local-storage.yml  docker-compose-local.yml  manage.py  pyproject.toml  requirements.txt  run_discord_bot.py  start.dev.sh  start.sh  start_celery.sh  swagger.json
.github/workflows/: build-and-push.yml
agents/: models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
agents/crews/: marketing.py
agents/migrations/: 0001_initial.py  0002_alter_agentrun_output_alter_agentrun_task.py  0002_crewtask_agent_role.py  0003_agentrun_created_at_agentrun_created_by.py
buckets/: tests.py  views.py
chains/: models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
chains/migrations/: 0001_initial.py  0002_chaintask_alter_summary_task_id.py  0003_chainevent.py  0004_rename_content_chainevent_input.py  0005_chainevent_flow_chaintask_event_id_and_more.py  0006_rename_flow_chainevent_flow_trace.py  0007_alter_chainevent_flow_trace.py  0008_remove_chaintask_event_id_chaintask_event.py
collect/: models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
collect/migrations/: 0001_initial.py  0002_alter_task_task_id_alter_urlsummary_task_id.py
conductor_server/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
flows/: models.py  serializers.py  tests.py  views.py
flows/migrations/: 0001_initial.py  0003_alter_flowresult_deployment_id_and_more.py  (+6 more)
reports/: models.py  serializers.py  tests.py  views.py
search/: serializers.py  tests.py  views.py
(+17 files in other folders)
